fix: map legend container not aligned

--- a/src/components/map/map-index2.module.css
+++ b/src/components/map/map-index2.module.css
@@ -8,7 +8,7 @@
 .mapLegendContainer {
     position: absolute;
     right: 20px;
-    top: calc(50px + 15px); /* 50px is the sub nav bar height + 15px (to align with ArcGIS nav buttons */
+    top: 15px; /* 15 px to align with ArcGIS nav buttons */
     z-index: 399;
 }
 
